objects/DMAPP__DM_Value_Map_Question_Field_Option__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Expression__c</fullName>
        <label>Expression</label>
        <picklist>
            <picklistValues>
                <fullName>=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≠</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Map_Question__c</fullName>
        <label>Value Map Question</label>
        <referenceTo>DMAPP__DM_Value_Map_Question__c</referenceTo>
        <relationshipLabel>Value Map Question Field Options</relationshipLabel>
        <relationshipName>Value_Map_Question_Field_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Value Map Question Field Option</label>
    <nameField>
        <label>Value Map Question Field Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Map Question Field Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DMAPP__Must_be_positive</fullName>
        <active>true</active>
        <errorConditionFormula>DMAPP__Score__c &lt; 0</errorConditionFormula>
        <errorDisplayField>DMAPP__Score__c</errorDisplayField>
        <errorMessage>Must be positive</errorMessage>
    </validationRules>
</CustomObject>